Revert "SuperSize: Fixed disassembly modal alignment."
This reverts commit d6ed1c918897554f2f8ac76959bc5ed0d92a3ef8.

Reason for revert: Fixed another way in 850ec7f313c7119597614340916889cef71af49f

Original change's description:
> SuperSize: Fixed disassembly modal alignment.
>
> Bug: 1308789
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3586307
> Commit-Queue: Vigaash Sivasothy <vigaash@google.com>
> Cr-Commit-Position: refs/heads/main@{#992542}

Bug: 1308789
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3594899
Auto-Submit: Andrew Grieve <agrieve@chromium.org>
Commit-Queue: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>
Cr-Commit-Position: refs/heads/main@{#993863}

--- a/tools/binary_size/libsupersize/viewer/static/main.css
+++ b/tools/binary_size/libsupersize/viewer/static/main.css
@@ -241,6 +241,7 @@ ul {
 }
 
 .modal-content {
+  align-items: center;
   background-color: #fefefe;
   border-radius: 5px;
   box-sizing: border-box;
